maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:83: error: not found: value -
      case indice-1 => marquerAutour(x,y,indice)
                 ^ShortestPathMaze:91: error: not found: value x
    setDirection(dirMinimale(x,y))
                             ^ShortestPathMaze:91: error: not found: value y
    setDirection(dirMinimale(x,y))
                               ^